--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
     <head>
         <title>My Webpage!</title>
     </head>
     <body>
-        Hello, world! Hello again!I am Good!
-        What is this git about?
+        Hello World!
     </body>
 </html>
