--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,3 @@
-<!DOCTYPE>
 <html>
     <head>
         <title>My Webpage!</title>
@@ -6,5 +5,6 @@
     <body>
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
+        HAHAHAHAHAHAHA i got it!!
     </body>
 </html>
