--- a/hello.html
+++ b/hello.html
@@ -8,3 +8,15 @@
         HAHAHAHAHAHAHA i got it!!
     </body>
 </html>
+<head>
+        <title>My Webpage!</title>
+    </head>
+    <body>
+        <h1>This is the largest headline</h1>
+        <h2>THis is also a large headline</h2>
+        <h3>This is a slightly smaller headline</h3>
+        <h4>This is an even smaller headline</h4>
+        <h5>This is the second-smallest healine</h5>
+        <h6>This is the samllest headline</h6>
+    </body>
+</html>
