--- a/hello.html
+++ b/hello.html
@@ -20,3 +20,17 @@
         <h6>This is the samllest headline</h6>
     </body>
 </html>
+An unordered list:
+    <ul>
+        <li>One Item</li>
+        <li>Another Item</li>
+        <li>Yet Another Item</li>
+    </ul>
+An Ordered List:
+    <ol>
+        <li>First Item</li>
+        <li>Second Item</li>
+        <li>Third Item</li>
+   </ol>
+  </body>
+</html>
