--- a/hello.html
+++ b/hello.html
@@ -32,6 +32,6 @@ An Ordered List:
         <li>Second Item</li>
         <li>Third Item</li>
    </ol>
-        <img src="C:\Users\lmiller\Desktop\GIt"
+        <img src="0.jpg"
   </body>
 </html>
