--- a/hello.html
+++ b/hello.html
@@ -31,7 +31,15 @@ An Ordered List:
         <li>First Item</li>
         <li>Second Item</li>
         <li>Third Item</li>
-   </ol>
-        <img src="0.jpg">
+   </ol>      
   </body>
+</html>
+<!DOCTYPE>
+<html>
+    <head>
+        <title>My Webpage!</title>
+    </head>
+    <body>
+        <img src="0.jpg">
+    </body>
 </html>
