--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
+    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F61A5lkj1eXL._SX425_.jpg&imgrefurl=https%3A%2F%2Fwww.amazon.com%2FChuckit-Bounces-Floats-Bright-Available%2Fdp%2FB00CI50NLG&docid=JnJQBHcHryyvXM&tbnid=G4noWstLkRKoiM%3A&vet=10ahUKEwjO3NXlv_vjAhXRVt8KHalMDbUQMwh8KAAwAA..i&w=425&h=440&hl=en&bih=561&biw=1280&q=ball&ved=0ahUKEwjO3NXlv_vjAhXRVt8KHalMDbUQMwh8KAAwAA&iact=mrc&uact=8"    
     </body>
 </html>
 <head>
@@ -31,11 +32,4 @@ An Ordered List:
         <li>Second Item</li>
         <li>Third Item</li>
    </ol>
-  </body>
-    <head>
-        <title>My Webpage!</title>
-    </head>
-    <body>
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F61A5lkj1eXL._SX425_.jpg&imgrefurl=https%3A%2F%2Fwww.amazon.com%2FChuckit-Bounces-Floats-Bright-Available%2Fdp%2FB00CI50NLG&docid=JnJQBHcHryyvXM&tbnid=G4noWstLkRKoiM%3A&vet=10ahUKEwjO3NXlv_vjAhXRVt8KHalMDbUQMwh8KAAwAA..i&w=425&h=440&hl=en&bih=561&biw=1280&q=ball&ved=0ahUKEwjO3NXlv_vjAhXRVt8KHalMDbUQMwh8KAAwAA&iact=mrc&uact=8">
-    </body>
 </html>
