--- a/hello.html
+++ b/hello.html
@@ -1,19 +1,20 @@
 <html>
     <head>
-        <title>My Webpage!</title>
+        <title>Laurence Miller!</title>
     </head>
     <body>
+      <h1>Laurence Miller</h1>
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
-    <img src="C:\Users\lmiller\Desktop\GIt\ball.jpg"    
+    <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg"
     </body>
 </html>
 <head>
         <title>My Webpage!</title>
     </head>
     <body>
-        <h1>This is the largest headline</h1>
+
         <h2>THis is also a large headline</h2>
         <h3>This is a slightly smaller headline</h3>
         <h4>This is an even smaller headline</h4>
