Added pic of ELisee

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
+          <img src="C:\Users\lmiller\Desktop\GIt\Elisee.jpg"
     <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg"
     </body>
 </html>
