--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,8 @@
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
-          <img src="C:\Users\lmiller\Desktop\GIt\Elisee.jpg"
-    <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg"
+          <img src="C:\Users\lmiller\Desktop\GIt\Elisee.jpg" rotate="180" width="700">
+    <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg">
     </body>
 </html>
 <head>
