--- a/hello.html
+++ b/hello.html
@@ -34,3 +34,21 @@ An Ordered List:
         <li>Third Item</li>
    </ol>
 </html>
+<h1>Presidents</h1>
+<table>
+    <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Years in Office</th>
+    </tr>
+    <tr>
+        <td>George</td>
+        <td>Washington</td>
+        <td>1789-1797</td>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Adams</td>
+        <td>1797-1801</td>
+    </tr>
+    </table>
