--- a/hello.html
+++ b/hello.html
@@ -2,12 +2,13 @@
     <head>
         <title>Laurence Miller!</title>
     </head>
+  <body>
+    <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg">
     <body>
       <h1>Laurence Miller</h1>
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
-    <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg">
     </body>
 </html>
 <head>
