--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,8 @@
     <body>
       <h1>Laurence Miller</h1>
         <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg">
-
+      </body>
+      <body>
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
