--- a/hello.html
+++ b/hello.html
@@ -4,13 +4,11 @@
     </head>
     <body>
       <h1>Laurence Miller</h1>
-        <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg">
+        <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="50">
       </body>
-      <body>
         Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!
-    </body>
 </html>
 <head>
         <title>My Webpage!</title>
