--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,11 @@
     </head>
     <body>
       <h1>Laurence Miller</h1>
-        <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="50">
+        <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="100">
       </body>
-        Hello World!Is it working? Yes it is!
+        <h3>Hello World!Is it working? Yes it is!
         Why cant i get this online!
-        HAHAHAHAHAHAHA i got it!!
+        HAHAHAHAHAHAHA i got it!!</h3>
 </html>
 <head>
         <title>My Webpage!</title>
