--- a/hello.html
+++ b/hello.html
@@ -51,4 +51,9 @@ An Ordered List:
         <td>Adams</td>
         <td>1797-1801</td>
     </tr>
+    <tr>
+        <td>Laurence</td>
+        <td>Miller</td>
+        <td>1989-2019</td>
+    </tr>
     </table>
