--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
         <title>Laurence Miller!</title>
     </head>
     <body>
-      <h1>Laurence Miller</h1>
+      <h1 style="color:blue;text-align:center;">Laurence Miller</h1>
         <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="100">
       </body>
         <h3>Hello World!Is it working? Yes it is!
