--- a/hello.html
+++ b/hello.html
@@ -6,9 +6,9 @@
       <h1 style="color:blue;text-align:center;">Laurence Miller</h1>
         <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="100">
       </body>
-        <h3>Hello World!Is it working? Yes it is!
+        <p>Hello World!Is it working? Yes it is!
         Why cant i get this online!
-        HAHAHAHAHAHAHA i got it!!</h3>
+        HAHAHAHAHAHAHA i got it!!</p>
 </html>
 <head>
         <title>My Webpage!</title>
