--- a/hello.html
+++ b/hello.html
@@ -2,11 +2,12 @@
     <head>
         <title>Laurence Miller!</title>
     </head>
+    <link rel="stylesheet" href="stlyes.css"
     <body>
-      <h1 style="color:blue;text-align:center;">Laurence Miller</h1>
+      <h1>Laurence Miller</h1>
         <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="100">
       </body>
-        <p style="color:red;text-decoration-style:grey;text:bold">Hello World!Is it working? Yes it is!
+        <p style="color:red;text-decoration-style:grey;">Hello World!Is it working? Yes it is!
         Why cant i get this online!
         HAHAHAHAHAHAHA i got it!!</p>
 </html>
