--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
     <head>
         <title>Laurence Miller!</title>
     </head>
-    <link rel="stylesheet" href="stlyes.css"
+    <link rel="stylesheet" href="stlyes.css">
     <body>
       <h1>Laurence Miller</h1>
         <img src="C:\Users\lmiller\Desktop\GIt\my pic.jpg" width="100">
